# PartStacker

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/actions/caching/: action.yml
.github/actions/common-macos/: action.yml
.github/actions/common-windows/: action.yml
.github/workflows/: build.yml  test.yml
minimal-vcpkg-repro/: CMakeLists.txt  repro.cpp
src/configure/: pstack_configure.cmake
src/pstack/: CMakeLists.txt
src/pstack/calc/: CMakeLists.txt  part.cpp  part.hpp  rotations.cpp  rotations.hpp  sinterbox.cpp  sinterbox.hpp  stacker.cpp  stacker.hpp
src/pstack/files/: read.cpp  read.hpp  stl.cpp
src/pstack/geo/: CMakeLists.txt  functions.hpp  matrix3.hpp  matrix4.hpp  point3.hpp  triangle.hpp  vector3.hpp
src/pstack/geo/test/: CMakeLists.txt  functions_ut.cpp  generate.hpp  matrix3_ut.cpp  matrix4_ut.cpp  point3_ut.cpp  triangle_ut.cpp  vector3_ut.cpp
src/pstack/graphics/: CMakeLists.txt  global.cpp  global.hpp  shader.cpp
src/pstack/gui/: CMakeLists.txt  controls.cpp  controls.hpp  list_view.cpp  list_view.hpp  main_window.cpp  main_window.hpp  parts_list.cpp  parts_list.hpp  preferences.hpp  results_list.cpp  results_list.hpp  save.cpp  save.hpp  transformation.hpp  viewport.cpp  viewport.hpp
src/pstack/util/: CMakeLists.txt  mdarray.hpp
tools/vcpkg/: pstack-universal-osx.cmake
